User is redirected to new todo page
* minor syntax fixes
* create head routing, add json methods to todo class, move request body parsing to parser class
* Remove unnecessary stubbing
* Fix new todo form

--- a/src/main/resources/index.css
+++ b/src/main/resources/index.css
@@ -61,7 +61,7 @@ a {
     justify-content: space-between;
 }
 
-.todo-form {
+#todo-form {
     align-items: center;
     display: flex;
     flex-direction: column;
