--- a/src/main/resources/todos.mustache
+++ b/src/main/resources/todos.mustache
@@ -18,7 +18,7 @@
           <section>
             <h2 class="todo-form-label">Add a new todo</h2>
             <p class="todo-form-instructions"> To add a new todo, submit a title and details in the form below.</p>
-            <form action="/todo" method="post" class="todo-form"> 
+            <form action="/todo" method="post" id="todo-form"> 
                 <p>
                     <label for="new-todo">Title:</label>
                     <input type="text" id="new-todo" name="title">
@@ -36,4 +36,29 @@
             &copy 2019 @angieg0nzalez | 8th Light Apprenticeship
         </footer>
     </body>
+    <script>
+        document
+        .getElementById("todo-form")
+        .addEventListener("submit", (event) => {
+        event.preventDefault();
+        var formData = "";
+        var formEl = event.target;
+        for (var i = 0; i < formEl.length; ++i) {
+            formData = formData + (formEl[i].name + "=" + formEl[i].value + "&");
+        }
+
+        var url = '/todo';
+        var fetchOptions = {
+            method: 'POST',
+            body: formData
+        };
+        
+           var responsePromise = fetch(url, fetchOptions)
+      .then((res) => {
+        const host = window.location.host;
+        const location = res.headers.get("location");
+        window.location.replace("http://" + host + location);
+      })
+    });
+    </script>
 </html>
