--- a/src/main/resources/todos-filtered.mustache
+++ b/src/main/resources/todos-filtered.mustache
@@ -30,6 +30,9 @@
                 <button id="save" type="submit">Submit</button>
             </form>
         </section>
+        <div>
+            <a href="/todo" rel="collection">Back to listings</a>
+        </div>
       </main>
     </body>
     <script>
@@ -44,8 +47,7 @@
         var formData = "";
         var formEl = event.target;
         for (var i = 0; i < formEl.length; ++i) {
-            console.log(formEl[i]);
-            formData = formData + (formEl[i].name + "=" + formEl[i].value.replace(/ /g, "%20")) + "&";
+            formData = formData + (formEl[i].name + "=" + formEl[i].value) + "&";
         }
 
      
