User can edit todo and is redirected to updated page

--- a/src/main/resources/todo-item.mustache
+++ b/src/main/resources/todo-item.mustache
@@ -24,6 +24,7 @@
             <p class="complete"> DONE </p>
             {{/done}}
             <section>
+                <a href="/todo/{{id}}/edit">Edit Listing</a>
                 <a href="/todo" rel="collection">Back to Listings</a>
             </section>
         </main>
